connection string changed

--- a/LayeredApp/appsettings.json
+++ b/LayeredApp/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DataConnection": "Server=.\\SQLEXPRESS; Initial Catalog=TestDB; Integrated Security=true"
+    "DataConnection": "Server=tcp:gauthamserver.database.windows.net,1433;Initial Catalog=ProductDataBase;Persist Security Info=False;User ID=kaageadmin;Password=sss@1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
